<resources>
    <string name="app_name">RedmineApp</string>
    <string name="e_mail">e-mail or api key</string>
    <string name="e_mail_hint">e-mail</string>
    <string name="password_hibt">password</string>
    <string name="domain_hint">domain</string>
    <string name="login_with_api_key">Login with api key</string>
    <string name="basic_login">Basic login</string>
    <string name="login_button">Login</string>
    <string name="defaultDomain">None</string>
    <string name="changeDomain">ChangeDomain</string>
    <string name="changeApiKey">ChangeApiKey</string>
    <string name="defaultApiKey">None</string>
    <string name="splash_screen">Redmine</string>


    <string name="login_error_message">Incorrect username or password</string>
    <string name="auto_login_error_message"></string>
</resources>
