<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assist.redmineapp.MainActivity">

    <EditText
        android:id="@+id/text_input_domain_Login"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:hint="@string/domain_hint"
        android:text="https://red.assist.ro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_input_e_mail_Login"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="204dp"
        android:hint="@string/e_mail_hint"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_input_password_Login"
        android:layout_width="200dp"
        android:layout_height="37dp"
        android:layout_marginTop="252dp"
        android:hint="@string/password_hibt"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_btn_withApiKey"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:onClick="loginWithApiKey"
        android:text="@string/login_with_api_key"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_withCredentials"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_btn_withCredentials"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="316dp"
        android:onClick="loginBtnUser"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
