<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assist.redmineapp.Login.LoginActivity">


    <TextView
        android:id="@+id/text_input_e_mail_loginError"
        android:layout_width="309dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:layout_marginTop="88dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/text_input_domain_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_input_domain_Login"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:layout_marginTop="120dp"
        android:hint="@string/domain_hint"
        android:text="https://red.assist.ro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_input_e_mail_Login"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:hint="@string/e_mail_hint"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_domain_Login" />

    <EditText
        android:id="@+id/text_input_password_Login"
        android:layout_width="343dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password_hibt"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_e_mail_Login" />

    <TextView
        android:id="@+id/login_btn_withApiKey"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:onClick="loginWithApiKey"
        android:text="@string/login_with_api_key"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_withCredentials"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/login_btn_withCredentials"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="loginBtnUser"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password_Login" />


</android.support.constraint.ConstraintLayout>
